bug fix: removed extra brace